Fix image and web page links

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -4,14 +4,14 @@
 
         <meta charset="UTF-8">
         <title>Classic Cheesecake</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
 
     </head>
 
     <body class="recipe">
 
         <h1>Classic Cheesecake</h1>
-        <img id="cheesecake" style= "text-align: center;" src="../odin-recipes/img/cheesecake.jpg" alt="cheesecake" height="500" width="700">
+        <img id="cheesecake" style= "text-align: center;" src="../img/cheesecake.jpg" alt="cheesecake" height="500" width="700">
         
         <h2>Description</h2>
         <p>
