--- a/recipes/grilled_cheese.html
+++ b/recipes/grilled_cheese.html
@@ -12,7 +12,7 @@
 
         <h1>Grilled Cheese Sandwich</h1>
         
-        <img src="../img/gilldchese.jpg" alt="cat eating grilled cheese" height="500" width="500">
+        <img src="../img/grilledcheese.jpg" alt="cat eating grilled cheese" height="500" width="500">
         <h2>Description</h2>
         <p>
             Grilled cheese recipe!
